tests/baselines/reference/returnTypeParameter.errors.txt
tests/cases/compiler/returnTypeParameter.ts(1,22): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value. 'undefined' is also allowed with --strictNullChecks.
tests/cases/compiler/returnTypeParameter.ts(2,34): error TS2693: 'T' only refers to a type, but is being used as a value here.


==== tests/cases/compiler/returnTypeParameter.ts (2 errors) ====
    function f<T>(a: T): T { } // error, no return statement
                         ~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value. 'undefined' is also allowed with --strictNullChecks.
    function f2<T>(a: T): T { return T; } // bug was that this satisfied the return statement requirement
                                     ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.